--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -41,3 +41,19 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+.credit {
+    font-size: 0.9em;
+    color: rgba(0, 0, 0, 0.5); 
+}
+
+.credit a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.3); 
+}
+
+
+.credit a:visited {
+    color: inherit;
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+}
