--- a/public/css/style.css
+++ b/public/css/style.css
@@ -364,7 +364,7 @@ header a {
 .gallery-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 8px;
   
   padding: 0 4px;
